--- a/Interface/ReportListPresence.rdlc
+++ b/Interface/ReportListPresence.rdlc
@@ -409,14 +409,14 @@
               <TablixCells>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="StudentName">
+                    <Textbox Name="name">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!StudentName.Value</Value>
+                              <Value>=Fields!name.Value</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -425,7 +425,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>StudentName</rd:DefaultName>
+                      <rd:DefaultName>name</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>Solid</Style>
@@ -460,14 +460,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="StudentClass">
+                    <Textbox Name="class">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!StudentClass.Value</Value>
+                              <Value>=Fields!class.Value</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -476,7 +476,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>StudentClass</rd:DefaultName>
+                      <rd:DefaultName>class</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>Solid</Style>
@@ -511,14 +511,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="StudentShift">
+                    <Textbox Name="shift">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!StudentShift.Value</Value>
+                              <Value>=Fields!shift.Value</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -527,7 +527,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>StudentShift</rd:DefaultName>
+                      <rd:DefaultName>shift</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>Solid</Style>
@@ -562,14 +562,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="StudentNumberOfAttendance">
+                    <Textbox Name="numberOfAttendance">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!StudentNumberOfAttendance.Value</Value>
+                              <Value>=Fields!numberOfAttendance.Value</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -578,7 +578,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>StudentNumberOfAttendance</rd:DefaultName>
+                      <rd:DefaultName>numberOfAttendance</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>Solid</Style>
@@ -613,14 +613,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="StudentNumberOfAbsences">
+                    <Textbox Name="numberOfAbsences">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!StudentNumberOfAbsences.Value</Value>
+                              <Value>=Fields!numberOfAbsences.Value</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -629,7 +629,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>StudentNumberOfAbsences</rd:DefaultName>
+                      <rd:DefaultName>numberOfAbsences</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>Solid</Style>
@@ -789,7 +789,7 @@
             </TablixMember>
           </TablixMembers>
         </TablixRowHierarchy>
-        <DataSetName>DataSet1</DataSetName>
+        <DataSetName>dtListPresence</DataSetName>
         <Top>0.68474cm</Top>
         <Left>0.3937cm</Left>
         <Height>1.0677cm</Height>
@@ -817,21 +817,37 @@
   </Page>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="Interface">
+    <DataSource Name="CourseManagement">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>28096844-0c35-4d21-8c23-896edeb57b9a</rd:DataSourceID>
+      <rd:DataSourceID>22875fe6-6ad9-45d5-948e-973459e4cdcf</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
-    <DataSet Name="DataSet1">
+    <DataSet Name="dtListPresence">
       <Query>
-        <DataSourceName>Interface</DataSourceName>
+        <DataSourceName>CourseManagement</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
+        <Field Name="class">
+          <DataField>class</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="name">
+          <DataField>name</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="numberOfAbsences">
+          <DataField>numberOfAbsences</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+        <Field Name="numberOfAttendance">
+          <DataField>numberOfAttendance</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
         <Field Name="percentageCameIn">
           <DataField>percentageCameIn</DataField>
           <rd:TypeName>System.String</rd:TypeName>
@@ -840,31 +856,15 @@
           <DataField>percentageStart</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="StudentClass">
-          <DataField>StudentClass</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="StudentName">
-          <DataField>StudentName</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="StudentNumberOfAbsences">
-          <DataField>StudentNumberOfAbsences</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
-        </Field>
-        <Field Name="StudentNumberOfAttendance">
-          <DataField>StudentNumberOfAttendance</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
-        </Field>
-        <Field Name="StudentShift">
-          <DataField>StudentShift</DataField>
+        <Field Name="shift">
+          <DataField>shift</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>Interface</rd:DataSetName>
+        <rd:DataSetName>CourseManagement</rd:DataSetName>
         <rd:TableName>ViewStudentReport</rd:TableName>
-        <rd:ObjectDataSourceType>Interface.ViewStudentReport, Interface, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
+        <rd:ObjectDataSourceType>CourseManagement.ViewStudentReport, CourseManagement, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
