--- a/Interface/SubReportListByClass.rdlc
+++ b/Interface/SubReportListByClass.rdlc
@@ -73,6 +73,7 @@
                                 <TextRun>
                                   <Value>Data</Value>
                                   <Style>
+                                    <FontSize>12pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
                                   </Style>
                                 </TextRun>
@@ -126,6 +127,7 @@
                                 <TextRun>
                                   <Value>Situação</Value>
                                   <Style>
+                                    <FontSize>12pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
                                   </Style>
                                 </TextRun>
@@ -183,7 +185,9 @@
                               <TextRuns>
                                 <TextRun>
                                   <Value>=Fields!date.Value</Value>
-                                  <Style />
+                                  <Style>
+                                    <FontSize>12pt</FontSize>
+                                  </Style>
                                 </TextRun>
                               </TextRuns>
                               <Style>
@@ -234,7 +238,9 @@
                               <TextRuns>
                                 <TextRun>
                                   <Value>=Fields!presence.Value</Value>
-                                  <Style />
+                                  <Style>
+                                    <FontSize>12pt</FontSize>
+                                  </Style>
                                 </TextRun>
                               </TextRuns>
                               <Style>
@@ -290,7 +296,9 @@
                               <TextRuns>
                                 <TextRun>
                                   <Value>=Fields!description.Value</Value>
-                                  <Style />
+                                  <Style>
+                                    <FontSize>12pt</FontSize>
+                                  </Style>
                                 </TextRun>
                               </TextRuns>
                               <Style>
